src/test/ui/feature-gates/feature-gate-extern_prelude.stderr
error: expected one of `!` or `::`, found `-`
  --> $DIR/feature-gate-extern_prelude.rs:1:4
   |
LL | can-only-test-this-in-run-make-fulldeps
   |    ^ expected one of `!` or `::` here

error: aborting due to previous error

