src/test/ui/feature-gates/feature-gate-extern_prelude.rs
can-only-test-this-in-run-make-fulldeps //~ ERROR expected item, found `can`
